# so_dso_place_recognition

./: .gitignore  CMakeLists.txt  PosesPts.h  README.md  package.xml
loop_closure/src/GIST/: CMakeLists.txt
loop_closure/src/GIST/include/: standalone_image.h
loop_closure/src/GIST/src/: gist.cpp  main.cpp  standalone_image.cpp  test_gist.cpp
place_recognition/: CMakeLists.txt  README.md
place_recognition/generate_signatures/: CMakeLists.txt  test.bash
place_recognition/generate_signatures/launch/: bow.launch  gist.launch  lidar.launch  visualize_points.launch
place_recognition/generate_signatures/src/BoW/: ORBVocabulary.h  ORBextractor.h  test_bow.cpp
place_recognition/generate_signatures/src/DELIGHT/: DELIGHT.cpp  DELIGHT.h  test_delight.cpp
place_recognition/generate_signatures/src/GIST/: CMakeLists.txt
place_recognition/generate_signatures/src/M2DP/: M2DP.cpp  test_m2dp.cpp
place_recognition/generate_signatures/src/SC/: SC.cpp  test_sc.cpp
place_recognition/generate_signatures/src/utils/: print_progress.h  pts_preprocess.h  visualize_points.cpp
place_recognition/launch/: bag2img.launch  kitti_tests.bash  robotcar_tests.bash  test_delight.launch  test_m2dp.launch  test_sc.launch
place_recognition/launch/BoW/: kitti6_bow.launch  kitti_bow.launch  t1.launch  t10.launch  t2.launch  t3.launch  t4.launch  t5.launch  t6.launch  t7.launch  t8.launch  t9.launch  test_bow.bash
place_recognition/launch/FBOW/: kitti6_fbow.launch  t1.launch  t10.launch  t2.launch  t3.launch  t4.launch  t5.launch  t6.launch  t7.launch  t8.launch  t9.launch
place_recognition/launch/GIST/: kitti6_gist.launch  robotcar_gist.launch  tara_gist.launch
place_recognition/launch/kitti/: kitti_bow.launch  kitti_gist.launch  kitti_lidar.launch
place_recognition/launch/robotcar/: robotcar_bow.launch  robotcar_gist.launch  robotcar_lidar.launch
place_recognition/match_signatures/: processDELIGHT.m  processDELIGHT.m~  processGIST.m  processM2DP.m  processSC.m  run_test.m  test.m  test_kitti.m  test_robotcar.m
place_recognition/matlab/KITTI/: kitti.m  processBoW.m  processDELIGHT.m  processGIST.m  processM2DP.m  processSC.m
place_recognition/matlab/OpenSeqSlam2/: README.md  RobotCar.m  RobotCarSC.m
place_recognition/matlab/OpenSeqSlam2/.config/: no_gui.xml
place_recognition/matlab/OpenSeqSlam2/doc/: welcome.tex
place_recognition/matlab/OpenSeqSlam2/results/: .gitignore
place_recognition/matlab/OpenSeqSlam2/seqslam/: SeqSLAMInstance.m
place_recognition/matlab/OpenSeqSlam2/tools/: calcPR.m  consoleString.m  datasetOpenImage.m  evaluateConfig.m  f1score.m  findDeepField.m  resultsOpen.m  resultsSave.m  setDeepField.m  settings2xml.m  toolboxWidthFactor.m  xa.m  xml2settings.m
place_recognition/matlab/OpenSeqSlam2/uis/: BatchPopup.m  GUISettings.m  HelpPopup.m  ProgressConsoleMatch.m  ResultsBatchGUI.m  SetupGUI.m  SpecSize.m  TweakMatchesPopup.m
place_recognition/matlab/RobotCar/: plot_season.m  processBoW.m  processM2DP.m  processSC.m  robotcar.m  robotcar_seq.m
place_recognition/matlab/pair/: getAUCandPlot.m  lab.m  plot_season.m  processDELIGHT.m  processGIST.m  processM2DP.m  processSC.m  robotcar.m
place_recognition/matlab/single/: grass.m  kitti.m  processDELIGHT.m  processGIST.m  processM2DP.m  processSC.m
place_recognition/results/KITTI/00/: poses.txt  poses_history_file.txt
place_recognition/results/KITTI/05/: incoming_id_file.txt  poses.txt
place_recognition/results/KITTI/07/: incoming_id_file.txt
place_recognition/results/KITTI/seq00/: incoming_id_file.txt
place_recognition/results/KITTI/seq02/: incoming_id_file.txt  poses_history_file.txt
place_recognition/results/KITTI/seq05/: poses_history_file.txt
place_recognition/results/KITTI/seq06/: incoming_id_file.txt
place_recognition/results/KITTI/seq07/: poses_history_file.txt
place_recognition/results/RobotCar/2014-07-14-14-49-50/: incoming_id_file.txt
place_recognition/results/RobotCar/2015-02-10-11-58-05/: poses_history_file.txt
place_recognition/results/RobotCar/2015-05-19-14-06-38/: poses_history_file.txt
place_recognition/results/Tara/1/: historyGIST.txt  (+1 more)
place_recognition/src/BoW/: test_bow.cpp
place_recognition/src/DELIGHT/: DELIGHT.cpp  DELIGHT.h  test_delight.cpp
place_recognition/src/FBoW/: test_fbow.cpp
place_recognition/src/GIST/: CMakeLists.txt  README.md
place_recognition/src/M2DP/: M2DP.cpp  M2DP.h  test_m2dp.cpp
place_recognition/src/SC/: SC.cpp  SC.h  test_sc.cpp
place_recognition/src/utils/: bag2img.cpp  process_pts.h  pts_align.h  pts_filter.h  pts_preprocess.h
so_dso/: CMakeLists.txt  README.md
so_dso/launch/: euroc.launch  kitti02_1321.launch  kitti3.launch  kitti412.launch  robotcar.launch  sample.launch  tara.launch  tum.launch
so_dso/src/: SODSOSystem.cpp  SODSOSystem.h  ScaleAccumulator.h  ScaleOptimizer.cpp  ScaleOptimizer.h  so_dso_node.cpp
so_dso/src/dso_helpers/: SODSOSystemDebugStuff.cpp  SODSOSystemMarginalize.cpp  SODSOSystemOptPoint.cpp  SODSOSystemOptimize.cpp
so_dso/src/output_wrappers/: OutputWrapperLoop.cpp  OutputWrapperLoop.h  OutputWrapperSODSO.cpp  OutputWrapperSODSO.h
(+238 files in other folders)
